tests/fixtures/semantics/invalid/storage_to_storage_field_required.ora
storage var arr: u32;
storage var arr2: u32;

fn f() -> void {
    arr = arr2; // invalid: storage <- storage bulk copy without element-level path
}


